<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5pt"
    android:orientation="vertical" >

      <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="3pt"
        android:text="@string/title_activity_login"
        android:textSize="10pt"
        tools:context=".LoginActivity" />
      
    <TextView
        android:id="@+id/status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_pilih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40pt"
        android:layout_marginBottom="10pt"
        android:text="@string/btn_pilih"
        android:onClick="buka_pilih"
        android:textSize="10pt"
        />
    <Button
        android:id="@+id/btn_rekap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10pt"
        android:text="@string/btn_rekap"
        android:textSize="10pt"
        android:onClick="buka_rekap"
        />

</LinearLayout>